--- a/Oasis infobyte task/task3- todo webpage/style3.css
+++ b/Oasis infobyte task/task3- todo webpage/style3.css
@@ -14,6 +14,7 @@ main{
     justify-content: center;
     align-items: center;
     background-color: #325d80 ;
+    border-color: red;
 }
 .box{
     width: 600px;
@@ -21,6 +22,7 @@ main{
     background-color: rgb(184, 191, 221);
     border-radius: 5px;
     padding: 15px;
+    border-color: red;
 }
 #items{
     padding:10px;
